stylesheet.css
html, body {
  width: 100vw;
  height: 100vh;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  font-family: Lato, Helvetica, Arial, Sans-serif;
  font-size: 18px;
  min-width: 940px;
}

hr {
    border: 0;
    padding-bottom: 1px;
    height: 0px;
    width: 100%;
    margin: 5px 0 25px 0;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.navbar {
  padding: 5px 30px;
  box-sizing: border-box;
  position: relative;
}

.navbar div {
  display: inline-block;
  position: absolute;
  right: 30px;
  top: 10px;
  color: white;
  font-size: 20px;
  text-transform: uppercase;
}

.navbar div span {
  font-weight: bold;
  font-size: 25px;
}

#linkback a {
  position: absolute;
  color: white;
  text-decoration: none;
  left: 50%;
  transform: translateX(-50%);
  top: 25px;
  font-size: 14px;
}

h2 {
  font-family: "Rock Salt", Lato, Serif;
  margin-bottom: 5px;
  margin-top: 0;
}

.btn {
  border-radius: 10px;
  margin-top: 25px;
  height: 75px;
  background-color: #006400;
  border: none;
  font-family: Lato;
  font-size: 2em;
  color: white;
  transition: background-color 0.2s;
}

.btn:hover {
  cursor: pointer;
  background-color: #024e02;
}

.navbar {
  width: 100%;
  height: 50px;
  background-color: #006400;
}

#logo {
  position: relative;
  height: 100%;
}

.instructions {
  margin: 0;
}

.container {
  margin: auto;
  margin-top: -50px;
  min-width: 900px;
  box-sizing: content-box;
  padding: 20px;
  display: flex;
  flex-grow: 1;
  max-width: 90vw;
  width: 1200px;
  justify-content: center;
  align-items: center;
  height:100%;
}

.left {
  min-width: 400px;
  width:50%;
  margin-right: 50px;
  height: 80%;
  display: flex;
  flex-direction: column;
}

#user-input {
    flex-grow: 1;
    position: relative;
    display: flex;
    flex-direction: column;
    height: 100%;
    padding-bottom: 20px;
}

#user-input button {
  margin: 0 0 -1px 0;
  border-radius: 0;
  height: 50px;
  width: 130px;
  font-size: 24px;
  z-index: 2;
  align-self: flex-end;
}

#code, .CodeMirror {
  resize: none;
  border: 1px solid gray;
  height: 99.9%;
  flex-grow: 1;
  max-height: 450px;
  min-height: 150px;
}

.codeblock {
  font-family: "Ubuntu Mono";
  background-color: #f5f5f5;
  border-radius: 10px;
  padding: 10px;
  color: #492c14;
  white-space: pre-line;
}

.CodeMirror pre {
  font-family: "Ubuntu Mono";
  padding-left: 10px;
}

.cm-s-mdn-like .CodeMirror-gutters {
  border-left-color: #492c14;
}


.right {
  flex-grow: 1;
  min-height: 80%;
  display: flex;
  flex-direction: column;
}

#preview {
  flex-grow: 1;
  border: 1px solid gray;
}

#next-button {
  position: absolute;
  bottom: 20px;
  right: 20px;
  padding-left: 20px;
  padding-right: 40px;
}

.fa-arrow-right {
  position: relative;
  left: 30px;
}

@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateX(0);
  }
  40% {
    transform: translateX(-30px);
  }
  60% {
    transform: translateX(-15px);
  }
}

.bounce {
  animation: bounce 2s infinite;
}

.inline-code {
  padding: 6px;
  background-color: hsla(0, 0%, 0%, 0.07);
  border-radius: 3px;
}

.animal-container, .color-container {
  display: flex;
  justify-content: space-around;
  align-items: baseline;
}

.animal {
  width: 100px;
  height: 100px;
  padding-top: 15px;
}

.monkey, .horse, .tiger {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  font-size: 22px;
  color: hsl(120, 100%, 30%);
}

.red, .green, .blue {
  padding: 20px;
}

.red {
  background-color: palevioletred;
}

.green {
  background-color: palegreen;
}

.blue {
  background-color: paleturquoise;
}

.hidden {
  display: none;
}

#success-msg {
  position: absolute;
  top: 60px;
  right: 20px;
  text-align: center;
  color: white;
  background-color: hsla(130, 70%, 40%, 0.5);
  padding: 20px;
  border-radius: 10px;
}

#fail-msg {
  position: absolute;
  bottom: 20px;
  right: 20px;
  text-align: center;
  color: white;
  background-color: hsla(0, 70%, 40%, 0.5);
  padding: 20px;
  border-radius: 10px;
}

